# TIN_TorrentLikeP2P

./: CMakeLists.txt  main.cpp  test.cpp
include/: Message.h  PeerInfo.h  ResourceInfo.h  SerializationUtils.h  Thread.h  TorrentClient.h  constants.h  utils.h
include/client/: Client.h
include/client/CLI/: CLI.h
include/client/serverCommunication/: ServerListener.h
include/server/: Server.h
include/server/clientCommunication/: ClientMessageListener.h
include/server/nodesCommunication/: NodeMessageListener.h
include/server/workerThreads/downloadWorker/: DownloadWorker.h
include/server/workerThreads/integrityWorker/: IntegrityWorker.h
include/server/workerThreads/supervisor/: SupervisorWorker.h
include/server/workerThreads/uploadWorker/: UploadWorker.h
include/structs/: ConnectedPeerInfo.h  Message.h  PeerInfo.h  ResourceInfo.h  SharedStructs.h  SynchronizedFile.h
include/threads/: CliParser.h  CliThread.h  TcpThread.h  TorrentClient.h  UdpThread.h
src/: Message.cpp  PeerInfo.cpp  ResourceInfo.cpp  SerializationUtils.cpp  TorrentClient.cpp  main.cpp  utils.cpp
src/client/: Client.cpp
src/client/CLI/: CLI.cpp
src/client/serverCommunication/: ServerListener.cpp
src/server/: Server.cpp
src/server/clientCommunication/: ClientMessageListener.cpp
src/server/nodesCommunication/: NodeMessageListener.cpp
src/structs/: ConnectedPeerInfo.cpp  Message.cpp  PeerInfo.cpp  ResourceInfo.cpp  SharedStructs.cpp  SynchronizedFile.cpp
src/threads/: CliParser.cpp  CliThread.cpp  TcpThread.cpp  TorrentClient.cpp  UdpThread.cpp
src/utils/: utils.cpp
(+4 files in other folders)
